# sodiumoxide

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cross.toml  Makefile  README.md  UPDATING.md  aliases.js  appveyor.yml  azure-pipelines.yml  bors.toml  crates.js  index.html  run_tests.sh  search-index.js  settings.html  source-files.js
.cargo/: config
.github/: bors.toml
ed25519/: all.html  constant.SIGNATURE_LENGTH.html  index.html  sidebar-items.js  struct.Error.html  struct.Signature.html
libc/: all.html  constant.ABS_CNT.html  constant.ABS_MAX.html  constant.ADDR_COMPAT_LAYOUT.html  constant.ADDR_LIMIT_32BIT.html  constant.ADDR_LIMIT_3GB.html  constant.ADDR_NO_RANDOMIZE.html  constant.ADJ_ESTERROR.html  constant.ADJ_FREQUENCY.html  constant.ADJ_MAXERROR.html  constant.ADJ_MICRO.html  constant.ADJ_NANO.html  constant.ADJ_OFFSET.html  constant.ADJ_OFFSET_SINGLESHOT.html  constant.ADJ_OFFSET_SS_READ.html  constant.ADJ_SETOFFSET.html  constant.ADJ_STATUS.html  constant.ADJ_TAI.html  constant.ADJ_TICK.html  constant.ADJ_TIMECONST.html  constant.AF_ALG.html  constant.AF_APPLETALK.html  constant.AF_ASH.html  constant.AF_ATMPVC.html  constant.AF_ATMSVC.html  constant.AF_AX25.html  constant.AF_BLUETOOTH.html  constant.AF_BRIDGE.html  constant.AF_CAIF.html  constant.AF_CAN.html  constant.AF_DECnet.html  constant.AF_ECONET.html  constant.AF_IEEE802154.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_IRDA.html  constant.AF_ISDN.html  constant.AF_IUCV.html  constant.AF_KEY.html  (+2033 more)
libsodium-sys/: Cargo.toml  README.md  build.rs  lib.rs
libsodium-sys/mingw/: upstream.tar.gz.minisig
libsodium-sys/msvc/: upstream.zip.minisig
libsodium-sys/msvc/Win32/Debug/v140/: libsodium.lib
libsodium-sys/msvc/Win32/Debug/v142/: libsodium.lib
libsodium-sys/msvc/Win32/Release/v140/: libsodium.lib
libsodium-sys/msvc/Win32/Release/v142/: libsodium.lib
libsodium-sys/msvc/x64/Debug/v140/: libsodium.lib
libsodium-sys/msvc/x64/Debug/v142/: libsodium.lib
libsodium-sys/msvc/x64/Release/v140/: libsodium.lib
libsodium-sys/msvc/x64/Release/v142/: libsodium.lib
libsodium-sys/src/: alignment_fix.patch  crypto_aead_aes256gcm.rs  crypto_aead_chacha20poly1305.rs  crypto_aead_xchacha20poly1305.rs  crypto_auth.rs  crypto_auth_hmacsha256.rs  crypto_auth_hmacsha512.rs  crypto_auth_hmacsha512256.rs  crypto_box.rs  crypto_box_curve25519xsalsa20poly1305.rs  crypto_core_chacha20.rs  crypto_core_hsalsa20.rs  crypto_core_salsa20.rs  crypto_core_salsa2012.rs  crypto_core_salsa208.rs  crypto_generichash.rs  crypto_generichash_blake2b.rs  crypto_generichash_blake2b_state.patch  crypto_hash.rs  crypto_hash_sha256.rs  crypto_hash_sha512.rs  crypto_kdf.rs  crypto_kdf_blake2b.rs  crypto_kx.rs  crypto_onetimeauth.rs  crypto_onetimeauth_poly1305.rs  crypto_pwhash_argon2i.rs  crypto_pwhash_argon2id.rs  crypto_pwhash_scryptsalsa208sha256.rs  crypto_scalarmult.rs  crypto_scalarmult_curve25519.rs  crypto_secretbox.rs  crypto_secretbox_xsalsa20poly1305.rs  crypto_secretstream_xchacha20poly1305.rs  crypto_shorthash_siphash24.rs  crypto_sign_ed25519.rs  crypto_sign_edwards25519sha512batch.rs  crypto_stream.rs  crypto_stream_chacha20.rs  crypto_stream_salsa20.rs  (+13 more)
libsodium-sys/tests/: crypto_aead_chacha20poly1305.rs  crypto_auth.rs  crypto_auth_hmacsha256.rs  crypto_auth_hmacsha512.rs  crypto_auth_hmacsha512256.rs  crypto_box.rs  crypto_box_curve25519xsalsa20poly1305.rs  crypto_core_hsalsa20.rs  crypto_core_salsa20.rs  crypto_core_salsa2012.rs  crypto_core_salsa208.rs  crypto_generichash.rs  crypto_generichash_blake2b.rs  crypto_hash.rs  crypto_hash_sha256.rs  crypto_hash_sha512.rs  crypto_onetimeauth.rs  crypto_onetimeauth_poly1305.rs  crypto_pwhash_scryptsalsa208sha256.rs  crypto_scalarmult.rs  crypto_scalarmult_curve25519.rs  crypto_secretbox.rs  crypto_secretbox_xsalsa20poly1305.rs  crypto_shorthash_siphash24.rs  crypto_sign_ed25519.rs  crypto_stream.rs  crypto_stream_aes128ctr.rs  crypto_stream_chacha20.rs  crypto_stream_salsa20.rs  crypto_stream_salsa2012.rs  crypto_stream_salsa208.rs  crypto_stream_xsalsa20.rs  crypto_verify.rs  test.rs
libsodium-sys/tests/crypto/: crypto_generichash.rs  crypto_generichash_blake2b.rs  crypto_onetimeauth_poly1305.rs  crypto_pwhash_scryptsalsa208sha256.rs  mod.rs
libsodium_sys/: all.html  constant.SODIUM_LIBRARY_VERSION_MAJOR.html  constant.SODIUM_LIBRARY_VERSION_MINOR.html  constant.SODIUM_VERSION_STRING.html  constant.crypto_aead_aes256gcm_ABYTES.html  constant.crypto_aead_aes256gcm_KEYBYTES.html  constant.crypto_aead_aes256gcm_NPUBBYTES.html  constant.crypto_aead_aes256gcm_NSECBYTES.html  constant.crypto_aead_chacha20poly1305_ABYTES.html  constant.crypto_aead_chacha20poly1305_IETF_ABYTES.html  constant.crypto_aead_chacha20poly1305_IETF_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_IETF_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_IETF_NSECBYTES.html  constant.crypto_aead_chacha20poly1305_KEYBYTES.html  constant.crypto_aead_chacha20poly1305_NPUBBYTES.html  constant.crypto_aead_chacha20poly1305_NSECBYTES.html  constant.crypto_aead_chacha20poly1305_ietf_ABYTES.html  constant.crypto_aead_chacha20poly1305_ietf_KEYBYTES.html  (+1691 more)
(+1723 files in other folders)
