[package]
authors = ["dnaq"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "https://docs.rs/sodiumoxide"
keywords = ["crypto", "NaCl", "libsodium"]
license = "MIT OR Apache-2.0"
name = "sodiumoxide"
readme = "README.md"
repository = "https://github.com/sodiumoxide/sodiumoxide"
categories = ["cryptography"]
version = "0.0.16"
exclude = [
    "**/.gitignore",
    ".travis.yml",
    "bors.toml"
]

[badges]
travis-ci = { repository = "dnaq/sodiumoxide" }

[dependencies]
libc = "0.2"
libsodium-sys = { version = "0.0.16", path = "libsodium-sys" }
serde = { version="1", optional = true }

[dev-dependencies]
serde = "1"
serde_json = "1"
rustc-serialize = "0.3"
rmp-serde = "0.13"

[features]
benchmarks = []
std = []
default = ["serde", "std"]
