[package]
authors = ["dnaq"]
description = "Fast cryptographic library for Rust (bindings to libsodium)"
documentation = "https://docs.rs/sodiumoxide"
keywords = ["crypto", "NaCl", "libsodium"]
license = "MIT OR Apache-2.0"
name = "sodiumoxide"
readme = "README.md"
repository = "https://github.com/sodiumoxide/sodiumoxide"
categories = ["cryptography"]
version = "0.2.6"
exclude = [
    "**/.gitignore",
    ".github/*"
]

[workspace]
members = ["libsodium-sys", "testcrate"]

[dependencies]
ed25519 = { version = "1", default-features = false }
cty = { version = "0.2.1" }


libsodium-sys = { version = "0.2.5", path = "libsodium-sys" }
serde = { version = "^1.0.59", default-features = false, optional = true }

[dev-dependencies]
libc = { version = "^0.2.41", default-features = false }
serde = "^1.0.59"
serde_json = "^1.0.17"
rmp-serde = "^0.13.7"

[features]
benchmarks = []
std = []
default = ["serde", "std"]
use-pkg-config = ["libsodium-sys/use-pkg-config"]
