[package]
authors = ["dnaq"]
edition = "2018"
description = "FFI binding to libsodium"
documentation = "https://sodiumoxide.github.io/sodiumoxide"
keywords = ["libsodium", "NaCl", "crypto"]
license = "MIT OR Apache-2.0"
links = "sodium"
name = "libsodium-sys"
repository = "https://github.com/sodiumoxide/sodiumoxide.git"
categories = ["cryptography", "api-bindings"]
version = "0.2.5"

[badges]
travis-ci = { repository = "sodiumoxide/sodiumoxide" }

[build-dependencies]
pkg-config = { version = "0.3", optional = true }

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = { version = "0.2", optional = true }

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
cc = { version = "1.0", optional = true }

[dependencies]
libc = { version = "0.2" , default-features = false }

[lib]
name = "libsodium_sys"
