[package]
authors = ["dnaq"]
build = "build.rs"
description = "FFI binding to libsodium"
documentation = "https://sodiumoxide.github.io/sodiumoxide"
keywords = ["libsodium", "NaCl", "crypto"]
license = "MIT OR Apache-2.0"
links = "sodium"
name = "libsodium-sys"
repository = "https://github.com/sodiumoxide/sodiumoxide.git"
categories = ["cryptography", "api-bindings"]
version = "0.2.6"

[build-dependencies]
pkg-config = "0.3"
walkdir = "2"

[target.'cfg(not(target_env = "msvc"))'.build-dependencies]
cc = "1.0"

[dependencies]
cty = { version = "0.2.1"}

[lib]
name = "libsodium_sys"

[features]
use-pkg-config = []
default = []

